examples/test/testpolicy8678.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8678
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key12: value10
      key43: value18
      key4: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value40
          key14: value46
      podSelector:
        matchLabels:
          key18: value42
